--- a/Microsoft/style.css
+++ b/Microsoft/style.css
@@ -19,15 +19,58 @@ body {
     --text-3xl : 3rem;
 }
 
-.header .nav {
+
+/* ------- small devices Nav---------- */
+.header .for_smallDevices {
+    /* max-width: 440px; */
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.header .for_smallDevices .left {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.header .for_smallDevices .right {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.header .for_smallDevices .main_threeline {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+}
+
+.header .for_smallDevices .three_lines {
+    background-color: black;
+    height: 1.1px;
+    width: 16px;
+
+}
+
+.header .nav {
+    display: none;
     justify-content: space-between;
     align-items: center;
     margin: 0 8.9rem;
     font-size: var(--text-sm);
     /* position: relative; */
-
 }
+
+/* -------media to change between Nav------------- */
+@media  (min-width: 770px) {
+    .header .for_smallDevices {
+        display: none;
+    }
+    .header .nav {
+        display: flex;
+    }
+}
+/* --------Large devices Nav--------- */
+
 .header .Micrisoft {
     position: absolute;
     top: 1.13rem;
@@ -263,7 +306,7 @@ body {
     grid-template-columns: repeat(1 , 1fr);
     justify-items: center;
     /* margin: 8rem 5rem; */
-    margin: 8rem 0;
+    margin: 8rem 0rem;
     /* gap: 1rem; */
     /* justify-self: center; */
 }
@@ -271,16 +314,60 @@ body {
 .four_list .p1 {
     display: flex;
     flex-direction: column;
-    max-width: 23.5rem;
+    width: 337px;
     text-decoration: none;
     color: black;
     box-shadow: 0 .1875rem .4375rem 0 rgba(0, 0, 0, .13),
      0 .0625rem .125rem 0 rgba(0, 0, 0, .11);
-
-    /* padding-bottom: .1rem; */
     margin-bottom: 3rem;
 }
+.four_list .p1 img {
+    width: 337px;
+    aspect-ratio: 5 / 3;
+    margin-bottom: 2rem;
+    /* align-self: self-start; */
+}
 
+@media (min-width: 361px) {
+    .four_list .p1 {
+        width: 352px;
+    }
+    .four_list .p1 img {
+        width: 352px;
+    }
+}
+@media (min-width: 376px) {
+    .four_list .p1 {
+        width: 361px;
+    }
+    .four_list .p1 img {
+        width: 361px;
+    }
+}
+@media (min-width: 385px) {
+    .four_list .p1 {
+        width: 367px;
+    }
+    .four_list .p1 img {
+        width: 367px;
+    }
+}
+@media (min-width: 391px) {
+    .four_list .p1 {
+        width: 389px;
+    }
+    .four_list .p1 img {
+        width: 389px;
+    }
+}
+@media (min-width: 413px) {
+    .four_list .p1 {
+        width: 405px;
+    }
+    .four_list .p1 img {
+        width: 405px;
+    }
+}
 
 .four_list .bold_title_box {
     font-size: var(--text-mlg);
@@ -310,14 +397,11 @@ body {
 .four_list .p1 .general_fourIcons:hover {
     background-color: #5156eb;
 }
+ .four_list .p1 .CopilotApp_icon {
+    padding: 1rem 1.3rem 1.8rem 1.3rem;
+ }
 
 
-.four_list .p1 img {
-    width: 23.5rem;
-    height: 13.78rem;
-    margin-bottom: 2rem;
-    /* align-self: self-start; */
-}
 
 @media (min-width: 440px) {
     .four_list {
@@ -329,13 +413,22 @@ body {
         margin-bottom: 0rem;
         position: relative;
         padding-bottom: 7rem;
+        width: 23.5rem;
     }
-
+    .four_list .p1 img {
+        width: 23.5rem;
+        height: 13.78rem;
+        margin-bottom: 2rem;
+        /* align-self: self-start; */
+    }
     .four_list .p1 .general_fourIcons{
         position: absolute;
         top : 25rem;
         align-self: normal;
     }
+    .four_list .p1 .CopilotApp_icon {
+        padding: 1rem 1.3rem;
+     }
     .four_list .bold_title_box {
         font-size: var(--text-xl);
     }
@@ -352,12 +445,11 @@ body {
     background-color: white;
     display: flex;
     flex-direction: column-reverse;
-
-    /* margin: 8rem 7rem; */
-    margin: 8rem 0;
+    justify-self: center;
+     margin: 8rem 0rem 8rem 1.7rem  ;
     text-decoration: none;
-    max-width: 97.6%;
-    height: 38rem;
+    width: 85.8vw;
+
 
 }
 
@@ -395,6 +487,8 @@ body {
     width: inherit;
     height: inherit;
 
+
+
 }
 
 .gamePass_Linktag .kaufenIcon_gamePass {
@@ -416,9 +510,10 @@ body {
 
  @media (min-width: 440px) {
     .gamePass_Linktag {
-    background-color: #161a1b;
-    display: flex;
-    flex-direction: row;
+        background-color: #161a1b;
+        display: flex;
+        flex-direction: row;
+        margin: 8rem 0rem;
     }
     .gamePass_Linktag .left_gamepass {
         margin: 12rem 8rem;
@@ -438,24 +533,6 @@ body {
 
  }
 
-
-/* -----------fur unternehmen------------------- */
-
-.fur_unternehmen {
-    font-size: var(--text-mlg);
-    font-weight: bold;
-    margin-bottom: 1.2rem;
-    margin-left: 2rem;
-}
-
-@media (min-width: 440px) {
-    .fur_unternehmen {
-        font-size: var(--text-2xl);
-        margin-left: 0;
-
-    }
-}
-
 /* ----------------------second four Items----------------------- */
 
 .four_list_second {
@@ -463,13 +540,29 @@ body {
     grid-template-columns: repeat(1 , 1fr);
     margin-bottom: 8rem;
     justify-items: center;
+    position: relative;
+
 }
 
+.four_list_second .fur_unternehmen {
+    font-size: var(--text-mlg);
+    font-weight: bold;
+    margin-bottom: 1.2rem;
+    position: absolute;
+    bottom: 100%;
+}
+
+@media (min-width: 440px) {
+
+    .four_list_second .fur_unternehmen {
+        font-size: var(--text-2xl);
+    }
+}
 
 .four_list_second .p1 {
     display: flex;
     flex-direction: column;
-    max-width: 23.5rem;
+    width: 337px;
     text-decoration: none;
     color: black;
     box-shadow: 0 .1875rem .4375rem 0 rgba(0, 0, 0, .13),
@@ -478,8 +571,54 @@ body {
     margin-bottom: 3rem;
 }
 
+.four_list_second .p1 img {
+    width: 337px;
+    aspect-ratio: 5 / 3;
+    margin-bottom: 2rem;
+    /* align-self: self-start; */
+}
 
 
+@media (min-width: 361px) {
+    .four_list_second .p1 {
+        width: 352px;
+    }
+    .four_list_second .p1 img {
+        width: 352px;
+    }
+}
+@media (min-width: 376px) {
+    .four_list_second .p1 {
+        width: 361px;
+    }
+    .four_list_second .p1 img {
+        width: 361px;
+    }
+}
+@media (min-width: 385px) {
+    .four_list_second .p1 {
+        width: 367px;
+    }
+    .four_list_second .p1 img {
+        width: 367px;
+    }
+}
+@media (min-width: 391px) {
+    .four_list_second .p1 {
+        width: 389px;
+    }
+    .four_list_second .p1 img {
+        width: 389px;
+    }
+}
+@media (min-width: 413px) {
+    .four_list_second .p1 {
+        width: 405px;
+    }
+    .four_list_second .p1 img {
+        width: 405px;
+    }
+}
 
 .four_list_second .bold_title_box {
     font-size: var(--text-mlg);
@@ -509,18 +648,18 @@ body {
     align-self: self-start;
 
 }
+.four_list_second .p1 .Visual_Studio {
+    padding: 1rem 1.3rem 1rem 1.3rem;
+ }
 
 .four_list_second .p1 .general_fourIcons:hover {
     background-color: #5156eb;
 }
 
 
-.four_list_second .p1 img {
-    width: 23.5rem;
-    height: 13.78rem;
-    margin-bottom: 2rem;
-    align-self: self-start;
-}
+
+
+
 @media (min-width: 440px) {
     .four_list_second {
     display: grid;
@@ -528,10 +667,20 @@ body {
     justify-items: normal;
     }
     .four_list_second .p1 {
+        max-width: 23.5rem;
         margin-bottom: 0rem;
         position: relative;
         padding-bottom: 7rem;
     }
+    .four_list_second .p1 img {
+        width: 23.5rem;
+        height: 13.78rem;
+        margin-bottom: 2rem;
+        align-self: self-start;
+    }
+    .four_list_second .p1 .Visual_Studio {
+        padding: 1rem 1.3rem;
+     }
     .four_list_second .bold_title_box{
         font-size: var(--text-xl);
     }
